<resources>
    <string name="app_name">Budgetly</string>
    <string name="title_categories">Categories</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_transactions_details">Transaction Details</string>
    <string name="title_category_details">Category Details</string>
    <string name="title_edit_transaction">Edit Transaction</string>
    <string name="title_notifications">Notifications</string>

    <!-- Placeholders -->
    <string name="categoryText_placeholder">Groceries</string>
    <string name="total_category_expenses_placeholder">10$</string>

    <!-- Notification Channel-->
    <string name="notification_channel_id">TestingNotifications</string>
    <string name="notification_channel_name">Testing Notifications</string>

    <!-- Banking apps packages -->
    <string name="test_package">com.example.budgetly</string>
    <string name="trade_rep_package">de.traderepublic.app</string>
    <string name="hype_package">it.hype.app</string>

    <string name="month_total_cost_header">Expenses</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>