<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_expenses">

    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.example.budgetly.ui.categories.CategoriesFragment"
        android:label="@string/title_categories"
        tools:layout="@layout/fragment_categories">

        <action
            android:id="@+id/action_navigation_categories_to_category_details"
            app:destination="@id/navigation_category_details"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_expenses"
        android:name="com.example.budgetly.ui.dashboard.TransactionsFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/fragment_transactions" >

        <action
            android:id="@+id/action_navigation_expenses_to_transactionDetails"
            app:destination="@id/navigation_transactionDetails"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.budgetly.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_transactionDetails"
        android:name="com.example.budgetly.ui.transactionDetails.TransactionDetailsFragment"
        android:label="@string/title_transactions_details"
        tools:layout="@layout/fragment_transaction_details" >

        <argument
            android:name="transactionId"
            app:argType="string" />

        <action
            android:id="@+id/action_navigation_transactionDetails_to_editTransaction"
            app:destination="@id/navigation_editTransaction"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_category_details"
        android:name="com.example.budgetly.ui.categoryDetails.CategoryDetailsFragment"
        android:label="@string/title_category_details"
        tools:layout="@layout/fragment_category_details" >

        <argument
            android:name="categoryId"
            app:argType="string" />

        <argument
            android:name="month"
            app:argType="string" />

        <action
            android:id="@+id/action_category_details_to_transactionDetails"
            app:destination="@id/navigation_transactionDetails"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_editTransaction"
        android:name="com.example.budgetly.ui.editTransaction.EditTransactionFragment"
        android:label="@string/title_edit_transaction"
        tools:layout="@layout/fragment_edit_transaction" >

        <argument
            android:name="transactionId"
            app:argType="string" />
    </fragment>

</navigation>
